avatar fix, user gap fix

--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -20,3 +20,6 @@
 		display: inline-flex
 	&__avatar
 		display: inline-flex
+		img
+			width: 40px
+			height: 40px
